// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`button should be clickable 1`] = `
<View
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderRadius": 26,
      "opacity": 1,
    }
  }
  testID="primary_button"
>
  <Text
    style={
      [
        {},
        {},
      ]
    }
  />
</View>
`;

exports[`button should match styling of button type fill 1`] = `
<View
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderRadius": 26,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      [
        {},
        {},
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type fill 2`] = `
<View
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderRadius": 26,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      [
        {},
        {},
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type flat 1`] = `
<View
  accessibilityState={
    {
      "disabled": false,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderRadius": 26,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      [
        {},
        {},
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should match styling of button type flat 2`] = `
<View
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderRadius": 26,
      "opacity": 1,
    }
  }
>
  <Text
    style={
      [
        {},
        {},
      ]
    }
  >
    Submit
  </Text>
</View>
`;

exports[`button should not be clickable when disabled 1`] = `
<View
  accessibilityState={
    {
      "disabled": true,
    }
  }
  accessible={true}
  collapsable={false}
  focusable={true}
  onClick={[Function]}
  onResponderGrant={[Function]}
  onResponderMove={[Function]}
  onResponderRelease={[Function]}
  onResponderTerminate={[Function]}
  onResponderTerminationRequest={[Function]}
  onStartShouldSetResponder={[Function]}
  style={
    {
      "borderRadius": 26,
      "opacity": 1,
    }
  }
  testID="primary_button"
>
  <Text
    style={
      [
        {},
        {},
      ]
    }
  />
</View>
`;
